--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=mongodb+srv://${USERNAME}:${PASSWORD}@${HOST}/admin?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://${USERNAME}:${PASSWORD}@${HOST}/${DBNAME}?retryWrites=true&w=majority
 spring.security.user.name=jitendrathecoder
 spring.security.user.password=ThisIsATestPassword123#$VerySecure&&YesYouKno,wit%
