--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.data.mongodb.uri=mongodb://${USERNAME}:${PASSWORD}@${HOST}:27017/admin
+spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/admin
 spring.security.user.name=jitendrathecoder
 spring.security.user.password=ThisIsATestPassword123#$VerySecure&&YesYouKno,wit%
-spring.profiles.active=dev
+#spring.profiles.active=dev
