--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,3 @@
-spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/admin
+spring.data.mongodb.uri=mongodb+srv://${USERNAME}:${PASSWORD}@${HOST}/${DBNAME}?retryWrites=true&w=majority
 spring.security.user.name=jitendrathecoder
 spring.security.user.password=ThisIsATestPassword123#$VerySecure&&YesYouKno,wit%
-spring.profiles.active=dev
-trace=true
